Bug 677383 - IJS client broken in 8.0?
Summary: IJS client broken in 8.0?
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Other Driver (show other bugs)
Version: master
Hardware: All All
: P2 normal
Assignee: Raph Levien
URL:
Keywords: bountiable
Depends on:
Blocks:
 
Reported: 2003-01-30 01:57 UTC by Jack Moffitt
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Moffitt 2003-01-30 01:57:06 UTC
Originally reported by: htl10@users.sourceforge.net
Hi, 

We are developing an IJS plugin for the Epson EPL-5x00L
GDI printers
(http://sourceforge.net/projects/epsonepl/). We are
a relatively new project and the problem was first
reported by
a test user about 2 weeks ago, and just been verified
by me;
The problem is as follows: the GDI printer is 
a B/W laser printer, so we are driving the IJS plugin with
these switches 

"-sProcessColorModel=DeviceGray -dBitsPerSample=1"

with ghostscript 7.04 which I did most of the development,
gs 7.04 sends 1 for white and 0 for black, which is fine.
However, after I upgrade to 8.0, the plugin seems to be 
doing something else totally (downgrading right away give 
me the older behaviour). black and white are both sent
as zero, while some blue (0,0,255) letters on a page is 
rastered and rendered partly as 1.

I suspect that the change of behaviour is due to
the change in ghostscript around v7.30 , from the
introduction of DeviceN colour scheme. Is this a
genuine bug of ghostscript 8.0 or a deliberate 
change of bahavior (e.g. we need some new switches
to get the old behavior)?
  
Comment 1 Jack Moffitt 2003-01-30 10:53:40 UTC
Comment originally by htl10@users.sourceforge.net
Logged In: YES 
user_id=506848

Just to provide more info. The problem was first observed
with v0.1 of epsoneplijs, and again with v0.2 (we only had
two release so far).  Both have a "ps2epl" script which works
somewhat similarly to ps2pdf, and a one-page "epl_test.ps" 
file for testing purposes. Note that the generated *.epl 
is not the same between v0.1 and v0.2 so you can't compare
v0.1 to v0.2, but the generated *.epl using gs 7.04 should
be the same
as using gs 8.0 and it is not (with the described difference as 
far as I can tell, white/black being 0, blue being partly 1). 

When the problem was first reported, because our epl_test.ps
is B/W, the user reported that it came out all black, and 
I only found the curious behavior with blue when I did it with a
pdf file which happened to have some hypertext links in blue
but otherwise was black letter on white page. The whole page
comes out as black except the hypertext links. 

The ps2epl contains the gs options, etc. You might have
to be a be careful about $PATH, etc.  
Comment 2 Jack Moffitt 2003-02-08 11:38:32 UTC
Comment originally by htl10@users.sourceforge.net
Logged In: YES 
user_id=506848

More info; I built every version of ghostscript between 7.04
and 8.00

7.04, 7.05, 7.21, 7.22  - okay

7.32, 7.33, 8.00 - broken.

7.20 - defaults not to build ijs client, so didn't test; 
7.30 - Unrecoverable error: rangecheck in .putdeviceprops
7.31 - Segmentation fault
 
Comment 3 Hin-Tak Leung 2003-09-02 11:46:59 UTC
This one-liner change fixes the problem. 
Since I haven't heard from the Ghostscript people for almost 
half a year, I have started distributing patched
version of ghostscript 8.0 at user's request, at
http://sourceforge.net/project/showfiles.php?group_id=69547&release_id=173560

Please let me know if you would like the distribution
to stop.
============================================================
--- src/gdevijs.c~	2002-10-30 12:35:11.000000000 +0000
+++ src/gdevijs.c	2003-03-30 05:42:48.000000000 +0100
@@ -1075,6 +1075,7 @@
     }
 
     maxvalue = (1 << bpc) - 1;
+    dci.max_components = components;
     dci.num_components = components;
     dci.depth = bpc * components;
     dci.max_gray = maxvalue;
==============================================================
Comment 4 Raph Levien 2004-03-09 20:54:12 UTC
Fix committed:

http://www.ghostscript.com/pipermail/gs-cvs/2004-March/004317.html