Fix problem with dci.max_components introduced with DeviceN changes. Closes bug #677383.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@4872 a1074d23-0009-0410-80fe-cf8c14f379e6